--- a/src/components/UploadImage/DragAndDrop.css
+++ b/src/components/UploadImage/DragAndDrop.css
@@ -1,49 +1,48 @@
 .drag-and-drop-container {
-    position: relative;
-  }
-  
-  .upload-dragger {
-    border: 2px dashed #ccc;
-    width: 100%;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-  
-  .upload-dragger.drag-over {
-    border: 2px dashed #ccc;
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  
-  .image-preview {
-    text-align: center;
-    position: relative;
-  }
-  
-  .preview-image {
-    width: 400px;
-    height: auto;
-  }
-  
-  .upload-dragger:before {
-    content: "";
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    border: 2px dashed white;
-    pointer-events: none;
-  }
-  
-  .upload-dragger.drag-over:before {
-    border: 2px dashed #ccc;
-  }
+  position: relative;
+}
 
-  p {
-    color: black;
-  }
-  
+.upload-dragger {
+  border: 2px dashed #ccc;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.upload-dragger.drag-over {
+  border: 2px dashed #ccc;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.image-preview {
+  text-align: center;
+  position: relative;
+}
+
+.preview-image {
+  width: 400px;
+  height: auto;
+}
+
+.upload-dragger:before {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  border: 2px dashed white;
+  pointer-events: none;
+}
+
+.upload-dragger.drag-over:before {
+  border: 2px dashed #ccc;
+}
+
+p {
+  color: black;
+}
